# apps/api/app/Modules/Identity/Domain/Models/Organization.php
@@ -3,10 +3,12 @@
 namespace App\Modules\Identity\Domain\Models;
 
 use App\Models\User;
+use App\Modules\Locations\Domain\Models\Location;
 use Database\Factories\OrganizationFactory;
 use Illuminate\Database\Eloquent\Attributes\Fillable;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\Relations\HasOne;
 
 #[Fillable(['name'])]
@@ -14,6 +16,12 @@ class Organization extends Model
 {
     /** @use HasFactory<OrganizationFactory> */
     use HasFactory;
+
+    /** @return HasMany<Location, $this> */
+    public function locations(): HasMany
+    {
+        return $this->hasMany(Location::class);
+    }
 
     /** @return HasOne<User, $this> */
     public function user(): HasOne
